k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: talentsphere-backend

spec:
  replicas: 1

  selector:
    matchLabels:
      app: talentsphere-backend

  template:
    metadata:
      labels:
        app: talentsphere-backend

    spec:
      containers:
      - name: talentsphere-backend

        image: zaidaftab/talentsphere-backend:latest

        ports:
        - containerPort: 8080
