k8s/backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: talentsphere-backend

  labels:
    app: talentsphere-backend

spec:
  selector:
    app: talentsphere-backend

  ports:
  - name: http
    port: 8080
    targetPort: 8080

  type: ClusterIP
