k8s/frontend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: talentsphere-frontend

spec:
  selector:
    app: talentsphere-frontend

  ports:
  - port: 80
    targetPort: 80

  type: LoadBalancer
