k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: talentsphere-ingress

spec:
  ingressClassName: nginx

  rules:
  - http:

      paths:

      - path: /
        pathType: Prefix

        backend:
          service:
            name: talentsphere-frontend

            port:
              number: 80

      - path: /api
        pathType: Prefix

        backend:
          service:
            name: talentsphere-backend

            port:
              number: 8080
